@@ -9,6 +9,7 @@ Current git version
 
   * Client window titles (controlled by the theme attributes 'title_height',
     'title_color', 'title_font')
+  * The 'lock_tag' attribute is now writable.
 
 Release 0.9.1 on 2020-12-28
 ---------------------------
